Simplify findByCountryAndId